solr-gke-zookeeper-external.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: solr-gke
    meta.helm.sh/release-namespace: solr
    networking.gke.io/load-balancer-type: Internal
  labels:
    app.kubernetes.io/component: zookeeper
    app.kubernetes.io/instance: solr-gke
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: zookeeper
    helm.sh/chart: zookeeper-7.0.7
  name: solr-gke-zookeeper-external
  namespace: solr
  resourceVersion: "5758868"
spec:
  type: LoadBalancer
  ports:
  - name: tcp-client
    port: 2181
    protocol: TCP
    targetPort: solr-client
  selector:
    app.kubernetes.io/component: zookeeper
    app.kubernetes.io/instance: solr-gke
    app.kubernetes.io/name: zookeeper
  sessionAffinity: None
